--- a/css/estilos.css
+++ b/css/estilos.css
@@ -86,6 +86,7 @@ footer{
     text-align: center;
     position: relative;
     top: 90px;
+    
 }
 
 ul{
@@ -272,9 +273,8 @@ table{
     font-style: arial;
     text-align: center;
     margin-top: 40px;
-    overflow-x:auto;
+    overflow:auto;
     display: block;
-    width: 100%;
 }
 td{
     background-color: rgb(230, 214, 214);
