--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,11 +5,10 @@ main{
     border:#1b262c;
     height: 100%;
 }
-
 h1{
     text-align: center;
     position: relative;
-    bottom: -150px;
+    bottom: -100px;
     font-family: titulo;
     font-size: 66px;
     color: green;
@@ -27,7 +26,7 @@ body{
 header{
     background-color:#0f4c75;
     background: url(backgrounds/background.jpg);
-    height: 300px;
+    height: 200px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -36,8 +35,18 @@ header{
     border-bottom-width: 1px;
     border-bottom-style: solid;
 }
-
-
+#header-index{
+    background: none;
+    border: none;
+}
+#body-index{
+    background-color:#0f4c75;
+    background: url(backgrounds/background.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+}
 section{
     border-radius: 4px;
     margin: 12px;
@@ -60,10 +69,29 @@ article{
     border-color: green;
     border-width: 1px;
     border-style: solid;
+    width: 100%;
+}
+article p{
+    font-size: 14px;
 }
 .blog-section img{
     height: 40%;
-    width: 100%;
+    width: 40%;
+}
+#index-art img {
+    height: 30px;
+    width: 30x;
+    float: right;
+}
+#index-art a{
+    float: right;
+    font-size: 20px;
+    text-decoration: none;
+    color: brown;
+}
+#index-art a:hover{
+    font-size: 140%;
+    color:brown;
 }
 .blog-section{
     font-style: arial;
@@ -77,7 +105,6 @@ article{
 
 .a-blog{
     text-decoration: none;  
-
 }
 footer{
     width: 100%;
@@ -86,9 +113,21 @@ footer{
     text-align: center;
     position: relative;
     top: 90px;
-    
 }
 
+footer img{
+    width: 20px;
+    height: 20px;
+    border-radius: 30%;
+    border:#1b262c;
+    border-width: 1px;
+    border-style: solid;
+    background: white;
+}
+footer b{
+    color: white;
+    display: block;
+}
 ul{
     margin-right:auto;
     margin-left:auto;
@@ -103,97 +142,39 @@ li{
     margin-bottom:auto;   
 }
 
-#foto-perfil{
-    display:block;
-    margin:auto;
-    height: 50%;
-    width: 50%;
-    border-radius: 50%;
-    border:#1b262c;
-    border-width: 5px;
-    border-style: solid;
+#main-div{
+    display: block;
+    width: 100%;
+    background: none;
+    height: 300px;
+    margin-left:auto;
+    margin-right: auto;
+    display: block;
+    
 }
-#nombre{
+.nombre{
     font-family: letracs;
-    color: #1b262c;
+    text-align: center;
+    letter-spacing: 2px;
+    -webkit-text-fill-color:#f5a31a ;
+    -webkit-text-stroke: 1px black; 
+    margin: 1em;
+}
+.nombre:hover{
+    -webkit-text-fill-color:black ;
+    -webkit-text-stroke: 1px yellowgreen;
+}
+#desc{
+    display: block;
+    margin-bottom: 15px;
 }
 
-
-@media (min-width: 50px){
-    #nombre {
-        font-size: 20px;
-    }
-    .li-nav a{
-        font-size: 10px;
-    }
-    h2{
-        font-size: 100%;
-    }
-    aside a{
-        font-size:10px;
-    }
-}
-
-@media (min-width: 380px){
-    #nombre {
-        font-size: 60px;
-    }
-    .li-nav a{
-        font-size: 15px;
-    }
-    h2{
-        font-size: 200%;
-    }
-    aside a{
-        font-size:100%;
-    }
-}
 @font-face {
     font-family:letracs;
     src: url(../fuentes/cs_regular.ttf);
 }
 
 
-.slider {
-	width: 95%;
-	margin: auto;
-	overflow: hidden;
-}
-
-.slider ul {
-	display: flex;
-	padding: 0;
-	width: 400%;
-	
-	animation: cambio 20s infinite alternate linear;
-}
-
-.slider li {
-	width: 100%;
-	list-style: none;
-}
-
-.slider img {
-	width: 100%;
-    height: 100%;
-    padding-bottom: 20px;
-    padding-top: 20px;
-
-}
-
-@keyframes cambio {
-	0% {margin-left: 0;}
-	20% {margin-left: 0;}
-	
-	25% {margin-left: -100%;}
-	45% {margin-left: -100%;}
-	
-	50% {margin-left: -200%;}
-	70% {margin-left: -200%;}
-	
-	75% {margin-left: -300%;}
-	100% {margin-left: -300%;}
-}
 .formulario label{
     padding: 15px;
     font-family:sans-serif;
@@ -236,7 +217,7 @@ li{
     height: 40px;
     font-size: 80%;
 }
-footer a img{
+footer a img {
     height: 20px;
     width: 20px;
 }
@@ -268,6 +249,19 @@ footer a img{
     transform: translateX(-50%);
 }
 
+.carousel-item-next, .carousel-item-prev, .carousel-item.active {
+    display:block;
+  }
+.carroza{
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    min-height: 200px !important;
+    
+}
+#index-art{
+    margin-top: 0px;
+}
 
 table{
     font-style: arial;
@@ -304,25 +298,15 @@ td a:hover{
     color: black;
     text-decoration: underline;
 }
-
-
-
-
-
-
-
 nav{
     background-color:#1b262c;
     overflow: hidden;
     width: 100%;
 } 
-  
-
-  
   .nav-pc a {
     display: block;
     text-align: center;
-    text-decoration: none;
+    text-decoration:none;
     font-size: 17px;
     font-weight: bold;
     text-align: center;
