--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,11 +5,10 @@ main{
     border:#1b262c;
     height: 100%;
 }
-
 h1{
     text-align: center;
     position: relative;
-    bottom: -150px;
+    bottom: -100px;
     font-family: titulo;
     font-size: 66px;
     color: green;
@@ -22,11 +21,12 @@ body{
     background-color: #bbe1fa;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 304 304' width='304' height='304'%3E%3Cpath fill='%231aff00' fill-opacity='0.23' d='M44.1 224a5 5 0 1 1 0 2H0v-2h44.1zm160 48a5 5 0 1 1 0 2H82v-2h122.1zm57.8-46a5 5 0 1 1 0-2H304v2h-42.1zm0 16a5 5 0 1 1 0-2H304v2h-42.1zm6.2-114a5 5 0 1 1 0 2h-86.2a5 5 0 1 1 0-2h86.2zm-256-48a5 5 0 1 1 0 2H0v-2h12.1zm185.8 34a5 5 0 1 1 0-2h86.2a5 5 0 1 1 0 2h-86.2zM258 12.1a5 5 0 1 1-2 0V0h2v12.1zm-64 208a5 5 0 1 1-2 0v-54.2a5 5 0 1 1 2 0v54.2zm48-198.2V80h62v2h-64V21.9a5 5 0 1 1 2 0zm16 16V64h46v2h-48V37.9a5 5 0 1 1 2 0zm-128 96V208h16v12.1a5 5 0 1 1-2 0V210h-16v-76.1a5 5 0 1 1 2 0zm-5.9-21.9a5 5 0 1 1 0 2H114v48H85.9a5 5 0 1 1 0-2H112v-48h12.1zm-6.2 130a5 5 0 1 1 0-2H176v-74.1a5 5 0 1 1 2 0V242h-60.1zm-16-64a5 5 0 1 1 0-2H114v48h10.1a5 5 0 1 1 0 2H112v-48h-10.1zM66 284.1a5 5 0 1 1-2 0V274H50v30h-2v-32h18v12.1zM236.1 176a5 5 0 1 1 0 2H226v94h48v32h-2v-30h-48v-98h12.1zm25.8-30a5 5 0 1 1 0-2H274v44.1a5 5 0 1 1-2 0V146h-10.1zm-64 96a5 5 0 1 1 0-2H208v-80h16v-14h-42.1a5 5 0 1 1 0-2H226v18h-16v80h-12.1zm86.2-210a5 5 0 1 1 0 2H272V0h2v32h10.1zM98 101.9V146H53.9a5 5 0 1 1 0-2H96v-42.1a5 5 0 1 1 2 0zM53.9 34a5 5 0 1 1 0-2H80V0h2v34H53.9zm60.1 3.9V66H82v64H69.9a5 5 0 1 1 0-2H80V64h32V37.9a5 5 0 1 1 2 0zM101.9 82a5 5 0 1 1 0-2H128V37.9a5 5 0 1 1 2 0V82h-28.1zm16-64a5 5 0 1 1 0-2H146v44.1a5 5 0 1 1-2 0V18h-26.1zm102.2 270a5 5 0 1 1 0 2H98v14h-2v-16h124.1zM242 149.9V160h16v34h-16v62h48v48h-2v-46h-48v-66h16v-30h-16v-12.1a5 5 0 1 1 2 0zM53.9 18a5 5 0 1 1 0-2H64V2H48V0h18v18H53.9zm112 32a5 5 0 1 1 0-2H192V0h50v2h-48v48h-28.1zm-48-48a5 5 0 0 1-9.8-2h2.07a3 3 0 1 0 5.66 0H178v34h-18V21.9a5 5 0 1 1 2 0V32h14V2h-58.1zm0 96a5 5 0 1 1 0-2H137l32-32h39V21.9a5 5 0 1 1 2 0V66h-40.17l-32 32H117.9zm28.1 90.1a5 5 0 1 1-2 0v-76.51L175.59 80H224V21.9a5 5 0 1 1 2 0V82h-49.59L146 112.41v75.69zm16 32a5 5 0 1 1-2 0v-99.51L184.59 96H300.1a5 5 0 0 1 3.9-3.9v2.07a3 3 0 0 0 0 5.66v2.07a5 5 0 0 1-3.9-3.9H185.41L162 121.41v98.69zm-144-64a5 5 0 1 1-2 0v-3.51l48-48V48h32V0h2v50H66v55.41l-48 48v2.69zM50 53.9v43.51l-48 48V208h26.1a5 5 0 1 1 0 2H0v-65.41l48-48V53.9a5 5 0 1 1 2 0zm-16 16V89.41l-34 34v-2.82l32-32V69.9a5 5 0 1 1 2 0zM12.1 32a5 5 0 1 1 0 2H9.41L0 43.41V40.6L8.59 32h3.51zm265.8 18a5 5 0 1 1 0-2h18.69l7.41-7.41v2.82L297.41 50H277.9zm-16 160a5 5 0 1 1 0-2H288v-71.41l16-16v2.82l-14 14V210h-28.1zm-208 32a5 5 0 1 1 0-2H64v-22.59L40.59 194H21.9a5 5 0 1 1 0-2H41.41L66 216.59V242H53.9zm150.2 14a5 5 0 1 1 0 2H96v-56.6L56.6 162H37.9a5 5 0 1 1 0-2h19.5L98 200.6V256h106.1zm-150.2 2a5 5 0 1 1 0-2H80v-46.59L48.59 178H21.9a5 5 0 1 1 0-2H49.41L82 208.59V258H53.9zM34 39.8v1.61L9.41 66H0v-2h8.59L32 40.59V0h2v39.8zM2 300.1a5 5 0 0 1 3.9 3.9H3.83A3 3 0 0 0 0 302.17V256h18v48h-2v-46H2v42.1zM34 241v63h-2v-62H0v-2h34v1zM17 18H0v-2h16V0h2v18h-1zm273-2h14v2h-16V0h2v16zm-32 273v15h-2v-14h-14v14h-2v-16h18v1zM0 92.1A5.02 5.02 0 0 1 6 97a5 5 0 0 1-6 4.9v-2.07a3 3 0 1 0 0-5.66V92.1zM80 272h2v32h-2v-32zm37.9 32h-2.07a3 3 0 0 0-5.66 0h-2.07a5 5 0 0 1 9.8 0zM5.9 0A5.02 5.02 0 0 1 0 5.9V3.83A3 3 0 0 0 3.83 0H5.9zm294.2 0h2.07A3 3 0 0 0 304 3.83V5.9a5 5 0 0 1-3.9-5.9zm3.9 300.1v2.07a3 3 0 0 0-1.83 1.83h-2.07a5 5 0 0 1 3.9-3.9zM97 100a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0-16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-48 32a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm32 48a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-16 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm32-16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0-32a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16 32a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm32 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0-16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-16-64a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16 96a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16-144a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0 32a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16-32a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16-16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-96 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16-32a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm96 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-16-64a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16-16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-32 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0-16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-16 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-16 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-16 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM49 36a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-32 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm32 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM33 68a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16-48a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0 240a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16 32a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-16-64a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-16-32a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm80-176a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-16-16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm32 48a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16-16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0-32a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm112 176a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-16 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM17 180a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0-32a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM17 84a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm32 64a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16-16a3 3 0 1 0 0-6 3 3 0 0 0 0 6z'%3E%3C/path%3E%3C/svg%3E"); 
     background-position: center center;
+    margin:0;
 }
 header{
     background-color:#0f4c75;
     background: url(backgrounds/background.jpg);
-    height: 300px;
+    height: 200px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -35,12 +35,17 @@ header{
     border-bottom-width: 1px;
     border-bottom-style: solid;
 }
-
-nav{
-    background-color:#1b262c;
-    display: flex;
-    margin-right:auto;
-    margin-left:auto;
+#header-index{
+    background: none;
+    border: none;
+}
+#body-index{
+    background-color:#0f4c75;
+    background: url(backgrounds/background.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
 }
 section{
     border-radius: 4px;
@@ -64,10 +69,29 @@ article{
     border-color: green;
     border-width: 1px;
     border-style: solid;
+    width: 100%;
+}
+article p{
+    font-size: 14px;
 }
 .blog-section img{
     height: 40%;
-    width: 100%;
+    width: 40%;
+}
+#index-art img {
+    height: 30px;
+    width: 30x;
+    float: right;
+}
+#index-art a{
+    float: right;
+    font-size: 20px;
+    text-decoration: none;
+    color: brown;
+}
+#index-art a:hover{
+    font-size: 140%;
+    color:brown;
 }
 .blog-section{
     font-style: arial;
@@ -81,7 +105,6 @@ article{
 
 .a-blog{
     text-decoration: none;  
-
 }
 footer{
     width: 100%;
@@ -92,9 +115,18 @@ footer{
     top: 90px;
 }
 
-.li-nav{
-    padding:15px;     
-    text-align: center;
+footer img{
+    width: 20px;
+    height: 20px;
+    border-radius: 30%;
+    border:#1b262c;
+    border-width: 1px;
+    border-style: solid;
+    background: white;
+}
+footer b{
+    color: white;
+    display: block;
 }
 ul{
     margin-right:auto;
@@ -107,123 +139,50 @@ li{
     margin-right:auto;
     margin-left:auto;
     margin-top:auto;
-    margin-bottom:auto;
+    margin-bottom:auto;   
+}
+
+#main-div{
+    display: block;
+    width: 100%;
+    background: none;
+    height: 300px;
+    margin-left:auto;
+    margin-right: auto;
+    display: block;
     
 }
-.li-nav a{
-    font-weight: bold;
-    text-align: center;
-    text-decoration: none;
-    color: #f5a31a;
-    padding:15px; 
-    text-align: center;
-    width: 80%;
-}
-
-.li-nav a:hover , li.nav a:active {
-    background-color: #f5a31a;
-    color: black;
-    border:#bbe1fa;
-}
-#foto-perfil{
-    display:block;
-    margin:auto;
-    height: 50%;
-    width: 50%;
-    border-radius: 50%;
-    border:#1b262c;
-    border-width: 5px;
-    border-style: solid;
-}
-#nombre{
+.nombre{
     font-family: letracs;
-    color: #1b262c;
+    text-align: center;
+    letter-spacing: 2px;
+    -webkit-text-fill-color:#f5a31a ;
+    -webkit-text-stroke: 1px black; 
+    margin: 1em;
+}
+.nombre:hover{
+    -webkit-text-fill-color:black ;
+    -webkit-text-stroke: 1px yellowgreen;
+}
+#desc{
+    display: block;
+    margin-bottom: 15px;
 }
 
-
-@media (min-width: 50px){
-    #nombre {
-        font-size: 20px;
-    }
-    .li-nav a{
-        font-size: 10px;
-    }
-    h2{
-        font-size: 100%;
-    }
-    aside a{
-        font-size:10px;
-    }
-}
-
-@media (min-width: 380px){
-    #nombre {
-        font-size: 60px;
-    }
-    .li-nav a{
-        font-size: 15px;
-    }
-    h2{
-        font-size: 200%;
-    }
-    aside a{
-        font-size:100%;
-    }
-}
 @font-face {
     font-family:letracs;
     src: url(../fuentes/cs_regular.ttf);
 }
 
 
-.slider {
-	width: 95%;
-	margin: auto;
-	overflow: hidden;
-}
-
-.slider ul {
-	display: flex;
-	padding: 0;
-	width: 400%;
-	
-	animation: cambio 20s infinite alternate linear;
-}
-
-.slider li {
-	width: 100%;
-	list-style: none;
-}
-
-.slider img {
-	width: 100%;
-    height: 100%;
-    padding-bottom: 20px;
-    padding-top: 20px;
-
-}
-
-@keyframes cambio {
-	0% {margin-left: 0;}
-	20% {margin-left: 0;}
-	
-	25% {margin-left: -100%;}
-	45% {margin-left: -100%;}
-	
-	50% {margin-left: -200%;}
-	70% {margin-left: -200%;}
-	
-	75% {margin-left: -300%;}
-	100% {margin-left: -300%;}
-}
 .formulario label{
-padding: 15px;
-font-family:sans-serif;
-font-size: 110%;
-text-align: center;
-margin-left: 50%;
-transform: translateX(-50%);
-color: #1b262c;
+    padding: 15px;
+    font-family:sans-serif;
+    font-size: 110%;
+    text-align: center;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    color: #1b262c;
 }
 .formulario input ,.formulario textarea{
     width: 60%;
@@ -241,10 +200,10 @@ color: #1b262c;
     outline:  none;
     box-shadow: 0 0 10px green;
 }
-button:focus{
+.boton-contacto:focus{
     box-shadow: 0 0 10px green;
 }
-button{
+.boton-contacto{
     width: 33.33%;
     margin-left: 50%;
     transform: translateX(-50%);
@@ -258,7 +217,7 @@ button{
     height: 40px;
     font-size: 80%;
 }
-footer a img{
+footer a img {
     height: 20px;
     width: 20px;
 }
@@ -289,4 +248,135 @@ footer a img{
     margin-left: 50%;
     transform: translateX(-50%);
 }
+
+.carousel-item-next, .carousel-item-prev, .carousel-item.active {
+    display:block;
+  }
+.carroza{
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    min-height: 200px !important;
+    
+}
+#index-art{
+    margin-top: 0px;
+}
+
+table{
+    font-style: arial;
+    text-align: center;
+    margin-top: 40px;
+    overflow:auto;
+    display: block;
+}
+td{
+    background-color: rgb(230, 214, 214);
+}
+th{
+    background-color: white;
+}
+th, td, thead, tbody{
+    border:grey;
+    border-width: 1px;
+    border-style:groove;
+    min-width: 250px;
+    padding: 5px;
+    border-color: grey;
+}
+td a img{
+    width: 20px;
+    height: 20px;
+}
+td a{
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
+td a:hover{
+    font-size: 105%;
+    color: black;
+    text-decoration: underline;
+}
+nav{
+    background-color:#1b262c;
+    overflow: hidden;
+    width: 100%;
+} 
+  .nav-pc a {
+    display: block;
+    text-align: center;
+    text-decoration:none;
+    font-size: 17px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    color: #f5a31a;
+    padding: 15px; 
+    text-align: center;
+  }
+  .resto{
+    float: right;
+  }
+  .active{
+    float: left;
+    margin-left: 5%;
+  }
+  
+  
+  .nav-pc .menu {
+    display: none;
+    background-color: #f5a31a;
+    color: black;
+  }
+
+  .active:hover {
+    background-color: green;
+  }
+  .nav-pc a:hover , .nav-pc a:active {
+    background-color: #f5a31a;
+    color: black;
+    border:#bbe1fa;
+}
+#hidden-noresponsive{
+    visibility: hidden;
+}
+  
+  @media screen and (max-width: 766px) {
+    .nav-pc a:not(:first-child) {
+      display: none;
+    }
+    .nav-pc a.menu {
+      float: right;
+      display: block;
+    }
+    .active{
+        margin-left: 0%;
+    }
+  }
+  
+  @media screen and (max-width: 766px) {
+    .nav-pc.responsive {position: relative;}
+    .nav-pc.responsive .menu {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .active{
+        margin-left: 0%;
+    }
+    .nav-pc.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+    #hidden-noresponsive{
+        visibility:visible;
+    }
+    #hidden-responsive{
+        visibility:hidden;
+        display: none;
+    }
+
+  }
 
