--- a/css/estilos.css
+++ b/css/estilos.css
@@ -61,6 +61,10 @@ header{
     border-width: 2px;
     border-style: solid;
     width: 97%;
+    font-style: arial;
+    text-align: center;
+    color:black;
+    transition: transform 0.2s;
 }
 #index-art{
     border-radius: 4px;
@@ -118,13 +122,6 @@ header{
 }
 #index-art .text {
     font-size: 1vw;
-}
-
-.blog-section{
-    font-style: arial;
-    text-align: center;
-    color:black;
-    transition: transform 0.2s;
 }
 .blog-section:hover{
     transform: scale(1.05);
@@ -252,7 +249,7 @@ footer a img {
     width: 20px;
 }
 article .titulo-text{
-    font-size: 2vw;
+    font-size: 3vw;
 }
 .titulo{
     font-size: 65px;
@@ -260,13 +257,11 @@ article .titulo-text{
 #index-art{
     margin-top: 0px;
 }
-#cont-blog{
 
-}
-#cont-blog h3{
+.blog-section .titulo-text{
     font-size: 2vw;
 }
-#cont-blog p{
+.blog-section .text{
     font-size: 1vw;
 }
 #article-contacto-redes h2{
@@ -315,7 +310,7 @@ article .titulo-text{
 #mmain-blog{
     max-width: 3000px;
 }
-.maindivar1-blog{
+.cajas-blog{
     width: 33%;
     float: left;
     display: inline-block;
@@ -422,7 +417,7 @@ nav{
     text-decoration:none;
 }
 @media screen and (max-width: 544px) {
-    .maindivar1-blog{
+    .cajas-blog{
         width: 100% !important;
     }
 }
@@ -443,19 +438,25 @@ nav{
     #contform, #contredes{
         width: 100%;
     }
+    #contredes h2{
+        font-size: 20px;
+    }
     .main-div .nombre{
-    font-size: 20px;
+        font-size: 20px;
     } 
-    .maindivar1-blog{
+    .cajas-blog{
         width: 50%;
     }
-    .articlea .text,#index-art .text, .input-contacto, #maindivar1-blog .text{
+    .cajas-blog .titulo-text{
+        font-size: 20px;
+    }
+    .articlea .text,#index-art .text, .input-contacto, .text,.blog-section .text{
         font-size: 11px;
     }
     .formulario label, .input-contacto{
         font-size: 16px;
     }
-    .articlea .titulo-text, .article-contacto li a, #index-art .titulo-text, #maindivar1-blog .titulo-text{
+    .articlea .titulo-text, .article-contacto li a, #index-art .titulo-text, #maindivar1-blog .titulo-text,.blog-section .titulo-text{
         font-size: 20px;
     }
     #article-contacto-redes a{
