--- a/css/estilosblog.css
+++ b/css/estilosblog.css
@@ -1,19 +1,36 @@
 .aside-blog{
     margin: 0px; 
-    width: 100%;
+    width: 26%;
     border:red;
     border-width: 5px;
     border-style: solid;  
     height: 90%;
+    margin-left: 1vw;
+    border-radius: 15px;
     margin-bottom: 15px;
     margin-top: 15px;
     background-color: white;
     padding: 5px;
+    float: left;
 }
 .main-blog{
 background-color: white;
-width: 100%;
+width:66%;
 padding: 5px;
+float: left;
+margin-top: 15px;
+}
+.main-blog img{
+    width: 100%;
+    height: 20%;
+}
+.main-blog h2{
+    display: block;
+}
+.contenido{
+    width: 80%;
+    margin: auto;
+    display: flexbox;
 }
 h2{
  text-align: center;
